--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -9,7 +9,7 @@
 html, body {
     height: 100vh;
     width: 100vw;
-    background-color: black;
+    /* background-color: black; */
 }
 
 body {
@@ -40,4 +40,26 @@ iframe {
     left: 22px;
     width: 267px;
     height: 471px;
+}
+
+section#redes-sociais {
+    display: flex;
+    flex-direction: column;
+    text-align: right;
+}
+
+section#redes-sociais img {
+    width: 50px;
+    height: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.459);
+    box-sizing: border-box;
+}
+
+section#redes-sociais img:hover {
+    border: 2px solid rgba(255, 255, 255, 0.623);
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.623);
+    transition: transform .5s;
 }
